--- a/template/template/pom.xml
+++ b/template/template/pom.xml
@@ -78,5 +78,11 @@
             <version>3.23.1</version>
             <scope>test</scope>
         </dependency>
+        <!-- logback -->
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.4.4</version>
+        </dependency>
     </dependencies>
 </project>
